# dropqa

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: indexer.example.yaml  server.example.yaml
docs/: design.md  mvp_getting_started.md  progress_mvp.md
dropqa/: __init__.py
dropqa/common/: __init__.py  config.py  db.py  embedding.py  init_db.py  models.py  schemas.py
dropqa/common/repository/: __init__.py  base.py  postgres.py  sqlite.py
dropqa/indexer/: __init__.py  __main__.py  indexer.py  parser.py  watcher.py
dropqa/indexer/normalizer/: __init__.py  base.py  paragraph_splitter.py  section_splitter.py  title_enricher.py
dropqa/server/: __init__.py  __main__.py  app.py  llm.py  qa.py  search.py
dropqa/server/agentic/: __init__.py  config.py  pipeline.py  prompts.py  query_rewriter.py  reranker.py
dropqa/server/frontend/: index.html  package-lock.json  package.json  vite.config.ts
dropqa/server/frontend/src/: App.vue  style.css
dropqa/server/frontend/src/components/: AnswerCard.vue  CopyButton.vue  HistoryPanel.vue  ReasoningTrace.vue  SearchBox.vue  SourceList.vue
dropqa/server/frontend/src/composables/: useHistory.ts  useQA.ts
dropqa/server/static/: index.html
tests/: __init__.py
tests/unit/: test_app.py  test_config.py  test_embedding.py  test_indexer.py  test_llm.py  test_normalizer.py  test_parser.py  test_qa.py  test_repository.py  test_search.py  test_watcher.py
tests/unit/test_agentic/: __init__.py  test_config.py  test_hybrid_search.py  test_pipeline.py  test_query_rewriter.py  test_reranker.py
(+1 files in other folders)
